gateway-demo/manifests/mirror-request/my-app-primary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-primary
  labels:
    app: my-app-primary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-primary
  template:
    metadata:
      labels:
        app: my-app-primary
    spec:
      containers:
        - name: my-app-primary
          image: ealen/echo-server:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-primary
  labels:
    app: my-app-primary
spec:
  selector:
    app: my-app-primary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
