gateway-demo/manifests/mirror-request/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mirror-route
  namespace: traefik
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - mirror.example
  rules:
  - backendRefs:
    - name: my-app-primary
      port: 80
      namespace: default
    filters:
    - type: RequestMirror      # NOT supported with Traefik v3.2.2
      requestMirror:           
        backendRef:            
          group: ""           
          kind: Service       
          name: my-app-mirror
          namespace: default
          port: 80
